# rasan

./: .env  docker-compose.yml  dockerfile  pyproject.toml
application/: serializers.py
application/migrations/: 0001_initial.py
apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/management/management/commands/: create_schemas.py
apps/order/: admin.py  models.py  serializers.py  views.py
apps/order/migrations/: 0001_initial.py  0002_remove_orderitem_total_price.py  0003_alter_order_total_amount.py  0004_alter_orderitem_order.py
apps/rasan/: apps.py  models.py  serializers.py  urls.py  views.py
apps/rasan/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_remove_orderitem_price_order_delivery_address_and_more.py  0003_remove_monthlyrasantemplate_user_and_more.py  0004_order_status.py
project/: settings.py  urls.py
rasan/: admin.py  apps.py  serializers.py  urls.py  views.py
rasan/migrations/: 0001_initial.py  0002_supplier_supplierproduct.py  0003_rename_family_size_familypackage_family_size_min_and_more.py
